stop cells shrinking on narrow screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,8 @@ body {
 td {
     height: 25px;
     width: 25px;
+    min-width: 25px;
+    min-height: 25px;
     font-family: "Impact";
     font-size: 20px;
     font-weight: bold;
